# neurovision

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: getting_started.md
neurovision/: __init__.py
neurovision/core/: __init__.py  activations.py  neural_network.py
neurovision/examples/: __init__.py  advanced_demo.py  basic_demo.py  benchmark_demo.py
neurovision/utils/: __init__.py  data_loader.py  metrics.py
neurovision/visualization/: __init__.py  animator.py  plotter.py
tests/: test_neural_network.py  test_visualization.py
